# iflytek

./: .gitignore  et --hard HEAD@{1}q  readme.md  requirements.txt
AIUI/log/: log_map
devel/include/amcl/: AMCLConfig.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/navigation_test/: TebLocalPlannerReconfigureConfig.h
devel/include/ucar_controller/: GetBatteryInfo.h  GetBatteryInfoRequest.h  GetBatteryInfoResponse.h  GetMaxVelRequest.h  GetMaxVelResponse.h  GetSensorTFRequest.h  GetSensorTFResponse.h  SetLEDModeRequest.h  SetLEDModeResponse.h  SetMaxVelRequest.h  SetMaxVelResponse.h  SetSensorTFRequest.h  SetSensorTFResponse.h
devel/lib/amcl/: amcl
devel/lib/base_local_planner/: point_grid
devel/lib/bridge/: bridge_node
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/fake_localization/: fake_localization
devel/lib/fdilink_ahrs/: ahrs_driver
devel/lib/global_planner/: planner
devel/lib/jie_ware/: costmap_cleaner  lidar_loc
devel/lib/lidar_undistortion/: lidar_undistortion
devel/lib/map_server/: map_saver  map_server  rtest
devel/lib/move_base/: move_base
devel/lib/navfn/: navfn_node
devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  bridge.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  eigen_conversions.pc  fake_localization.pc  global_planner.pc  jie_ware.pc  kdl_conversions.pc  lidar_undistortion.pc  map_server.pc  move_base.pc  move_slow_and_clear.pc  nav_core.pc  navfn.pc  navigation_test.pc  rf2o_laser_odometry.pc  rknn_ros.pc  rotate_recovery.pc  speech_command.pc  tf2_geometry_msgs.pc  tf2_kdl.pc  tf_conversions.pc  ucar_camera.pc  visual_navigation.pc  voxel_grid.pc
devel/lib/rf2o_laser_odometry/: rf2o_laser_odometry_node
devel/lib/rknn_ros/: rknn.py
devel/lib/speech_command/: speech_command_node
devel/lib/tf/: static_transform_publisher  testBroadcaster  testListener  tf_change_notifier  tf_echo  tf_empty_listener  tf_monitor  transform_listener_unittest
devel/lib/ucar_controller/: base_driver
devel/lib/visual_navigation/: visual_navigation
devel/lib/ydlidar/: ydlidar_client  ydlidar_node
msc/693c71d05215b17c2e99a0e2e8097ed5/local/: local.cache
src/: test_file.txt
src/2d_lidar_undistortion-master/: CMakeLists.txt
src/2d_lidar_undistortion-master/launch/: lidar_undistortion_offline.launch
src/2d_lidar_undistortion-master/src/: line_fitting_new.cpp  line_fitting_node.cpp
src/bridge/: CMakeLists.txt  package.xml
src/bridge/include/bridge/: bridge.h
src/bridge/src/: bridge.cpp
src/fdilink_ahrs/launch/: ahrs_driver.launch
src/navigation_test/: CMakeLists.txt  THE_END.txt
src/navigation_test/.wav/: ffmpeg.py
src/navigation_test/cfg/: Avision.yml  Avision_1.yml  ObstaclePlugin.cfg
src/navigation_test/include/: .vision_ncnn.h.swp
src/navigation_test/launch/: .navigation_gs_one_2_new.launch.swp  .navigation_test.launch.swn  .navigation_test.launch.swo  .navigation_test.launch.swp  nav_config.yaml  navigation_test.launch  navigation_test_copy.launch  rankone_common.launch  rankone_special.launch
src/navigation_test/mylaunch/: Sample.launch  back.launch  controller.launch  trace.launch  trace2.launch  trace3.launch
src/navigation_test/scripts/: .MYSBC.py.swp  .env  MYSBC.py  QR_Decode.py  come_back.py  config.json  demo.py  lidar.txt  mapScan.py  mission.py  move.py  navigation_test.py  tools.py
src/navigation_test/scripts/maps/: map_05-28_9872.txt
src/navigation_test/src/: .ucar_navigation.cpp.swg  .ucar_navigation.cpp.swh  .ucar_navigation.cpp.swi  .ucar_navigation.cpp.swj  .ucar_navigation.cpp.swk  .ucar_navigation.cpp.swl  .ucar_navigation.cpp.swm  .ucar_navigation.cpp.swn  .ucar_navigation.cpp.swo  .ucar_navigation.cpp.swp  .ucar_navigation_7_19_gs_one.cpp.swo  .ucar_navigation_7_19_gs_one.cpp.swp  .ucar_pure_pursuit_control_true_teb_cv_gs_one.cpp.swp  .ucar_pure_pursuit_control_true_teb_cv_gs_one.swp  .vision_ncnn.cpp.swp  client.h  find_line.cpp  find_line.h  get_pic_FL.cpp  nav_config.cpp  picodet.cpp  picodet.h  pudding.h  ucar_nav_zhidaowuzhangaijiasu_7_6_gs2wdm.cpp  ucar_navigation.cpp  ucar_navigation_7_19_gs_one.cpp  ucar_navigation_copy.cpp  ucar_navigation_rrrrr.cpp  ucar_pure_pursuit_control_true_teb_cv_gs_one.cpp  vision_ncnn.cpp  vision_ncnn.h  修改.md
src/navigation_test/src/model/: picodet_s_320_processed_2024xf_lcnet_0314-sim-opt-fp16.param
src/navigation_test/src/model/0628/: picodet_XF_416m_0628_processed-sim-opt-fp16.param
src/navigation_test/src/model/0703_lr_0_002_masic/: 0707_lr0_002_masic.param
src/navigation_test/src/model/0708_m/: 0708_m.param
src/navigation_test/src/model/m416_0702/: picodet_m.param
src/navigation_test/src/model/s416_0703/: picodet_XF_416s_0703_6_processed-sim-opt-fp16.param  picodet_XF_416s_0703_processed-sim-opt-fp16.param
src/navigation_test/src/model/temp/: 1.param
src/rf2o_laser_odometry/: CMakeLists.txt
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
src/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
src/rknn_ros/: CMakeLists.txt  package.xml
src/rknn_ros/launch/: rknn.launch
src/rknn_ros/rknn_ws/: demo.py  rknn.py  rknnUCAR2.py
src/robot_localization/params/: dual_ekf_navsat_example.yaml  ekf_template.yaml
src/robot_localization/src/: navsat_transform.cpp  ros_filter.cpp
src/speech_command/include/: Global.h
src/speech_command/src/: AIUITester.cpp  aiuiMain.cpp
src/ucar_controller/launch/: base_driver.launch  (+1 more)
src/visual_navigation/: CMakeLists.txt
src/visual_navigation/include/: control.h  detect_edge.h  filming.h  pid.h  visual_headfile.h
src/visual_navigation/launch/: test.launch
src/visual_navigation/scripts/: CannyTest.py  TempTest.py  demo.py  test.py  visual_nav.py
src/visual_navigation/src/: binarization.cpp  common_function.cpp  control.cpp  detect_edge.cpp  eight_neighborhood.cpp  pid.cpp  visual_navigation.cpp
src/visual_navigation_3/: package.xml
ucar_ws/: readme.md  requirements.txt
(+192 files in other folders)
